# notion-RAG

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py  utils.py
app/database/: __init__.py  connection.py  operations.py
app/routers/: __init__.py  auth.py  chat.py  integrations.py  notion.py
app/services/: __init__.py  chat_service.py  embedding_service.py  notion_service.py  pipedream_service.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/auth/: SignIn.tsx  SignUp.tsx
frontend/src/components/chat/: Chat.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/shared/: ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx  PipedreamContext.tsx  ThemeContext.tsx
supabase/: config.toml
supabase/migrations/: 20251204030850_create_users_table.sql  20251204062036_create_integrations_table.sql  20251204062036_integrations.sql  20251204185232_add_ping_function.sql  20251204190723_remove_app_id.sql  20251204192226_create_search_function.sql  20251204201107_notion_content.sql  20251205025634_reduce_vector_embedding_dims.sql  20251205043154_create_chat_tables.sql
