[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-search"
version = "0.1.0"
description = "Notion search system with Paragon API integration and pgVector"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "supabase>=2.4.2",
    "sentence-transformers>=2.6.1",
    "openai>=1.25.0",
    "numpy>=1.26.4",
    "tiktoken>=0.6.0",
    "langchain>=0.1.16",
    "langchain-community>=0.0.36",
    "fastapi>=0.110.2",
    "uvicorn>=0.29.0",
    "tenacity>=8.2.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "black>=24.3.0",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
